# derevo

./: .env.example  .gitignore  .readthedocs.yaml  LICENSE.md  Makefile  README.md  README_ru.md  composition_generator.ipynb  docker-compose.yml  frontend_config.json  nginx.conf  plants_file_2023-07-18.xlsx
.github/workflows/: main.yml
backend/: .gitignore  Dockerfile  Makefile  README.md  env.example  pyproject.toml  requirements.txt
backend/maintenance/: README.md  replace_limitation_factors.py
backend/plants_api/: __init__.py  __main__.py
backend/plants_api/config/: __init__.py  app_settings_global.py
backend/plants_api/db/: __init__.py  alembic.ini
backend/plants_api/dto/: __init__.py  listings.py  plants.py
backend/plants_api/endpoints/: __init__.py  caches.py  compositions.py  health_check.py  limitations.py  listings.py  photos.py  plants.py  redirect_to_swagger.py  routers.py  update.py
backend/plants_api/exceptions/: __init__.py  base.py
backend/plants_api/logic/: __init__.py  composition.py  compositions.py  geometry_requests.py  limitations.py  listings.py  pdf.py  plants.py
backend/plants_api/schemas/: __init__.py  basic_requests.py  basic_responses.py  compositions.py  geojson.py  geometry.py  geometry_request.py  health_check.py  listing.py  listings.py  plants.py
backend/plants_api/utils/: __init__.py  cryptography.py  dependencies.py  dotenv.py  exceptions.py  photos.py  tokens.py
compositioner/: __init__.py  data_collection.py  get_adjacency.py  get_combined.py  get_compatability.py  get_composition.py  get_optimal_resolution.py  prepare_polygons.py  settings.py  utils.py
data_extractor/: __init__.py  extractor.py  texts_example.csv
database/: .gitignore  1_create_schema.sql  2_insert_data.sql  3_parse_xlsx_to_db.ipynb  3_parse_xlsx_to_db.py  README.md  test_plants_names.py
database/fill_data/: README.md  insert_cohabitation.ipynb
frontend/: .gitignore  .metadata  Dockerfile  Makefile  README.md  config.yml.example  pubspec.yaml
frontend/assets/cfg/: config.json.example
frontend/lib/: main.dart
frontend/lib/config/: config.dart
frontend/lib/entities/: limitation_factors.dart  plants.dart  plants.g.dart
frontend/lib/models/: compositions.dart  compositions.g.dart  limitation_factors.dart  limitation_factors.g.dart  limitations_response.dart  method_request.dart  plants.g.dart
frontend/lib/notifiers/: compositions.dart  limitations_response.dart  method_request.dart
frontend/lib/pages/: map.dart  plants_list.dart
frontend/lib/widgets/: choose_options.dart  landscape_map.dart  (+3 more)
frontend/web/: index.html  manifest.json
frontend/windows/: CMakeLists.txt
method/: .env.example  .gitignore  Dockerfile  Makefile  README.md  data_collection.py  get_adjacency.py  get_combined.py  get_compatability.py  get_composition.py  get_optimal_resolution.py  parks.geojson  pyproject.toml  requirements-dev.txt  requirements.txt
method/compositioner/: __init__.py  adjacency.py  combined.py  compatability.py  composition.py  get_combined.py  get_composition.py  get_optimal_resolution.py  optimal_resolution.py  territories.py
method/compositioner/models/: __init__.py  enumerations.py  global_territory.py  plants.py  territory.py
method/derevo/: __init__.py  adjacency.py  combined.py  compatability.py  composition.py  optimal_resolution.py  prepare_polygons.py  territories.py
method/derevo/models/: cohabitation.py  global_territory.py  plants.py  territory.py
method/docs/: Makefile  requirements.txt
method/docs/source/: conf.py  index.rst
method/docs/source/components/: derevo.models.rst  derevo.rst
method/docs/source/derevo/: derevo.rst  index.rst  intro.rst  quickstart.rst
method/example/: __main__.py  data_collection.py  derevo_enums.py
method/tests/compositioner/: test_cohabitations.py  test_humidity_types.py  test_light_types.py  test_limitation_factors.py  test_soil_acidity_types.py  test_soil_fertility_types.py  test_usda_zones.py
photos/: .gitignore  README.md  docker-compose.yml  insert_photos.ipynb  nginx.conf  update_photos.py
(+83 files in other folders)
